# PricePulseWatcherBot

./: .env  .env.example  .gitignore  AGENTS.md  LICENSE  README.md  config.json.example  install.sh  pyproject.toml  requirements.txt  run.py  sample_global.json
.github/workflows/: ci.yml
bot/: __init__.py  config.py  db.py  price.py  scheduler.py
bot/handlers/: __init__.py  commands.py
pricepulsebot/: __init__.py  __main__.py  api.py  config.py  db.py  handlers.py  liquidations.py  main.py
tests/: test_alerts.py  test_build_sub_entries.py  test_coin_data.py  test_feargreed.py  test_find_coin.py  test_interval.py  test_list_edit.py  test_milestone_toggle.py  test_milestones.py  test_milestones_cmd.py  test_news.py  test_ohlcv.py  test_price.py  test_resolve_coin.py  test_resolve_pair.py  test_settings_cmd.py  test_settings_menu.py  test_status_cmd.py  test_suggest.py  test_target_price.py  test_timeframe.py  test_top_coins.py  test_trending.py  test_unsubscribe_all.py  test_volume_alerts.py  test_volume_profile.py
